// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test banner reducer returns the initialState when the action is null 1`] = `
Object {
  "dismissTime": 7000,
  "message": null,
  "type": null,
}
`;

exports[`Test banner reducer should set state back to initialState 1`] = `
Object {
  "dismissTime": 7000,
  "message": null,
  "type": null,
}
`;

exports[`Test banner reducer should set state message to payload and type to success 1`] = `
Object {
  "dismissTime": 7000,
  "message": "Error message",
  "type": "success",
}
`;

exports[`Test banner reducer should set state message to payload and type to system 1`] = `
Object {
  "dismissTime": 7000,
  "message": "Error message",
  "type": "system",
}
`;

exports[`Test banner reducer should set state message to payload and type to user 1`] = `
Object {
  "dismissTime": 7000,
  "message": "Error message",
  "type": "user",
}
`;
